--- a/src/stegano/embeddingdoc.fxml
+++ b/src/stegano/embeddingdoc.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
@@ -34,6 +36,16 @@
                   <Button fx:id="btnMainMenu" layoutX="22.0" layoutY="720.0" mnemonicParsing="false" onAction="#handleBtnMainMenu" text="Main Menu" />
                   <TextArea fx:id="textChiper" editable="false" layoutX="22.0" layoutY="405.0" prefHeight="222.0" prefWidth="466.0" wrapText="true" />
                   <Separator layoutX="495.0" layoutY="14.0" orientation="VERTICAL" prefHeight="699.0" prefWidth="0.0" />
+                  <Text layoutX="508.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cover Image" />
+                  <Button fx:id="btnBrowseImage" alignment="CENTER_RIGHT" layoutX="688.0" layoutY="29.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="78.0" text="Browse" textAlignment="CENTER" />
+                  <ImageView fitHeight="223.0" fitWidth="300.0" focusTraversable="true" layoutX="501.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" style="-fx-background-color: 'firebrick'; -fx-border-color: darkblue;">
+                     <effect>
+                        <DropShadow color="#514f4f" height="22.49" radius="11.114999999999998" width="23.97" />
+                     </effect>
+                  </ImageView>
+                  <Label layoutX="766.0" layoutY="36.0" text="(.bmp)" />
+                  <Button fx:id="btnEmbedMessage" layoutX="694.0" layoutY="285.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="107.0" text="Embed Message" />
+                  <Separator layoutX="497.0" layoutY="367.0" prefHeight="0.0" prefWidth="432.0" />
                </children>
             </AnchorPane>
          </children>
