--- a/src/stegano/embeddingdoc.fxml
+++ b/src/stegano/embeddingdoc.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Text?>
 
 <ScrollPane id="scrolPaneEmbedding" fx:id="scrolPaneEmbedding" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="820.0" prefWidth="1148.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stegano.EmbeddingController">
@@ -38,7 +37,7 @@
                   <TextArea fx:id="textChiper" editable="false" layoutX="22.0" layoutY="405.0" prefHeight="222.0" prefWidth="466.0" wrapText="true" />
                   <Separator layoutX="495.0" layoutY="14.0" orientation="VERTICAL" prefHeight="699.0" prefWidth="0.0" />
                   <Text layoutX="508.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cover Image" />
-                  <Button id="btnBrowseCoverImg" fx:id="btnBrowseCoverImg" alignment="CENTER_RIGHT" layoutX="688.0" layoutY="29.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="78.0" text="Browse" textAlignment="CENTER" onAction="#handlebtnBrowseCoverImg" />
+                  <Button id="btnBrowseCoverImg" fx:id="btnBrowseCoverImg" alignment="CENTER_RIGHT" layoutX="688.0" layoutY="29.0" mnemonicParsing="false" onAction="#handlebtnBrowseCoverImg" prefHeight="25.0" prefWidth="78.0" text="Browse" textAlignment="CENTER" />
                   <ImageView id="imgViewCover" fx:id="imgViewCover" fitHeight="223.0" fitWidth="300.0" focusTraversable="true" layoutX="501.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" style="-fx-background-color: 'firebrick'; -fx-border-color: darkblue;">
                      <effect>
                         <DropShadow color="#514f4f" height="22.49" radius="11.114999999999998" width="23.97" />
@@ -47,7 +46,6 @@
                   <Label layoutX="766.0" layoutY="36.0" text="(.bmp)" />
                   <Button fx:id="btnEmbedMessage" layoutX="665.0" layoutY="285.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="136.0" text="Embed Message" />
                   <Separator layoutX="497.0" layoutY="367.0" prefHeight="0.0" prefWidth="432.0" />
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e3e5e8" height="200.0" layoutX="508.0" layoutY="66.0" stroke="BLACK" strokeType="INSIDE" width="284.0" />
                   <Label layoutX="508.0" layoutY="320.0" text="Time : " />
                   <Text fx:id="textTimer" layoutX="543.0" layoutY="333.0" strokeType="OUTSIDE" strokeWidth="0.0" text="00:00" wrappingWidth="118.13671875" />
                   <Text layoutX="513.0" layoutY="390.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Stego Image" />
@@ -56,7 +54,6 @@
                         <DropShadow color="#514f4f" height="22.49" radius="11.114999999999998" width="23.97" />
                      </effect>
                   </ImageView>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e3e5e8" height="200.0" layoutX="511.0" layoutY="411.0" stroke="BLACK" strokeType="INSIDE" width="284.0" />
                   <Button id="btnSaveStegoImg" fx:id="btnSaveStegoImg" layoutX="709.0" layoutY="629.0" mnemonicParsing="false" text="Save" />
                   <Label layoutX="759.0" layoutY="635.0" text="(.bmp)" />
                   <Button id="btnNext" fx:id="btnNext" alignment="BASELINE_LEFT" layoutX="828.0" layoutY="733.0" mnemonicParsing="false" onAction="#handleBtnMainMenu" prefHeight="26.0" prefWidth="93.0" text="Next" />
