--- a/src/aes/encryptdoc.fxml
+++ b/src/aes/encryptdoc.fxml
@@ -8,19 +8,22 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="595.0" prefWidth="738.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="aes.EncryptController">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="595.0" prefWidth="1283.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="aes.EncryptController">
    <content>
-      <VBox prefHeight="593.0" prefWidth="736.0">
+      <VBox prefHeight="593.0" prefWidth="1281.0">
          <children>
-            <AnchorPane prefHeight="593.0" prefWidth="736.0" style="-fx-background-color: dimgrey;">
+            <AnchorPane prefHeight="593.0" prefWidth="1045.0" style="-fx-background-color: dimgrey;">
                <children>
                   <Label layoutX="14.0" layoutY="31.0" text="Password : " />
-                  <TextField id="itextPass" fx:id="itextPass" layoutX="14.0" layoutY="55.0" prefHeight="33.0" prefWidth="264.0" onKeyPressed="#handleInputPass" />
+                  <TextField id="itextPass" fx:id="itextPass" layoutX="14.0" layoutY="55.0" onKeyPressed="#handleInputPass" prefHeight="33.0" prefWidth="264.0" />
                   <Button id="btnEncrypt" fx:id="btnEncrypt" layoutX="287.0" layoutY="59.0" mnemonicParsing="false" onAction="#handlebtnEncrypt" text="Encrypt" />
                   <Label layoutX="14.0" layoutY="120.0" text="Info :" />
-                  <TextArea id="txtareaChiper" fx:id="txtareaChiper" editable="false" layoutX="14.0" layoutY="137.0" prefHeight="362.0" prefWidth="635.0" wrapText="false" />
+                  <TextArea id="txtareaChiper" fx:id="txtareaChiper" editable="false" layoutX="14.0" layoutY="137.0" prefHeight="362.0" prefWidth="559.0" wrapText="false" />
                   <Button id="btnMainMenu" fx:id="btnMainMenu" layoutX="14.0" layoutY="544.0" mnemonicParsing="false" onAction="#handleBtnMainMenu" text="Main Menu" />
                   <Label id="lblInfoChiper" fx:id="lblInfoChiper" layoutX="14.0" layoutY="506.0" prefHeight="26.0" prefWidth="357.0" style="-fx-border-color: darkslategray; -fx-background-color: ghostwhite; -fx-border-width: 1;" text="Length: " />
+                  <TextField layoutX="595.0" layoutY="59.0" />
+                  <Label layoutX="595.0" layoutY="40.0" text="Password" />
+                  <TextArea fx:id="teksChiper" layoutX="595.0" layoutY="137.0" prefHeight="365.0" prefWidth="644.0" />
                </children>
             </AnchorPane>
          </children>
