--- a/src/aes/kriptodoc.fxml
+++ b/src/aes/kriptodoc.fxml
@@ -25,7 +25,7 @@
                   <TextField fx:id="txtInputKunciDecrypt" layoutX="546.0" layoutY="43.0" prefHeight="33.0" prefWidth="311.0" />
                   <Label layoutX="546.0" layoutY="26.0" prefHeight="17.0" prefWidth="151.0" text="Kunci:" />
                   <Button fx:id="btnDecrypt" layoutX="869.0" layoutY="47.0" mnemonicParsing="false" onAction="#handleBtnDecrypt" text="Decrypt" />
-                  <TextArea fx:id="txtareaHasilDecrypt" editable="false" layoutX="546.0" layoutY="96.0" prefHeight="249.0" prefWidth="544.0" />
+                  <TextArea fx:id="txtareaHasilDecrypt" editable="false" layoutX="546.0" layoutY="96.0" prefHeight="249.0" prefWidth="544.0" wrapText="true" />
                </children>
             </AnchorPane>
          </children>
