--- a/src/stegano/embeddingdoc.fxml
+++ b/src/stegano/embeddingdoc.fxml
@@ -13,14 +13,14 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<ScrollPane id="scrolPaneEmbedding" fx:id="scrolPaneEmbedding" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="820.0" prefWidth="1148.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stegano.EmbeddingController">
+<ScrollPane id="scrolPaneEmbedding" fx:id="scrolPaneEmbedding" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="820.0" prefWidth="1148.0" xmlns="http://javafx.com/javafx/8.0.45" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stegano.EmbeddingController">
    <content>
       <VBox prefHeight="809.0" prefWidth="1133.0">
          <children>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="821.0">
                <children>
                   <Text fx:id="txtLabelMessage" fill="#5e5a5a" layoutX="22.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass=".text" text="Message Text :" />
-                  <TextArea fx:id="textInputMessage" layoutX="22.0" layoutY="55.0" prefHeight="222.0" prefWidth="464.0" wrapText="true" />
+                  <TextArea fx:id="textInputMessage" editable="false" layoutX="22.0" layoutY="55.0" prefHeight="222.0" prefWidth="464.0" wrapText="true" />
                   <Button fx:id="btnBrowseText" alignment="CENTER_RIGHT" contentDisplay="CENTER" layoutX="368.0" layoutY="27.0" mnemonicParsing="false" onAction="#handleBrowseFileText" prefHeight="25.0" prefWidth="73.0" text="Browse" textAlignment="CENTER">
                      <cursor>
                         <Cursor fx:constant="HAND" />
@@ -28,7 +28,7 @@
                   </Button>
                   <Label layoutX="442.0" layoutY="33.0" text="(.txt)" />
                   <Text fx:id="txtInfoMessage" layoutX="22.0" layoutY="290.0" stroke="#c3c1c1" strokeType="OUTSIDE" strokeWidth="0.0" text="Text Length : -" wrappingWidth="362.13671875" />
-                  <Button fx:id="btnEncrypt" disable="true" layoutX="244.0" layoutY="337.0" mnemonicParsing="false" text="Encrypt" />
+                  <Button fx:id="btnEncrypt" disable="true" layoutX="244.0" layoutY="337.0" mnemonicParsing="false" text="Encrypt" onAction="#handleBtnEncrypt" />
                   <Label layoutX="22.0" layoutY="320.0" text="Password : " />
                   <Text layoutX="22.0" layoutY="401.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass=".text" text="Chipertext :" />
                   <Text fx:id="txtInfoChipertext" layoutX="22.0" layoutY="640.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chipertext Length : - " wrappingWidth="387.732421875" />
@@ -37,14 +37,14 @@
                   <TextArea fx:id="textChiper" editable="false" layoutX="22.0" layoutY="405.0" prefHeight="222.0" prefWidth="466.0" wrapText="true" />
                   <Separator layoutX="495.0" layoutY="14.0" orientation="VERTICAL" prefHeight="699.0" prefWidth="0.0" />
                   <Text layoutX="508.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cover Image" />
-                  <Button id="btnBrowseCoverImg" fx:id="btnBrowseCoverImg" alignment="CENTER_RIGHT" layoutX="688.0" layoutY="29.0" mnemonicParsing="false" onAction="#handlebtnBrowseCoverImg" prefHeight="25.0" prefWidth="78.0" text="Browse" textAlignment="CENTER" />
+                  <Button id="btnBrowseCoverImg" fx:id="btnBrowseCoverImg" disable="true" alignment="CENTER_RIGHT" layoutX="688.0" layoutY="29.0" mnemonicParsing="false" onAction="#handlebtnBrowseCoverImg" prefHeight="25.0" prefWidth="78.0" text="Browse" textAlignment="CENTER" />
                   <ImageView id="imgViewCover" fx:id="imgViewCover" fitHeight="223.0" fitWidth="300.0" focusTraversable="true" layoutX="501.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" style="-fx-background-color: 'firebrick'; -fx-border-color: darkblue;">
                      <effect>
                         <DropShadow color="#514f4f" height="22.49" radius="11.114999999999998" width="23.97" />
                      </effect>
                   </ImageView>
                   <Label layoutX="766.0" layoutY="36.0" text="(.bmp)" />
-                  <Button fx:id="btnEmbedMessage" layoutX="665.0" layoutY="285.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="136.0" text="Embed Message" />
+                  <Button fx:id="btnEmbedMessage" onAction="#handleBtnEmbedMessage" layoutX="665.0" layoutY="285.0" disable="true" mnemonicParsing="false" prefHeight="26.0" prefWidth="136.0" text="Embed Message" />
                   <Separator layoutX="497.0" layoutY="367.0" prefHeight="0.0" prefWidth="432.0" />
                   <Label layoutX="508.0" layoutY="320.0" text="Time : " />
                   <Text fx:id="textTimer" layoutX="543.0" layoutY="333.0" strokeType="OUTSIDE" strokeWidth="0.0" text="00:00" wrappingWidth="118.13671875" />
@@ -54,7 +54,7 @@
                         <DropShadow color="#514f4f" height="22.49" radius="11.114999999999998" width="23.97" />
                      </effect>
                   </ImageView>
-                  <Button id="btnSaveStegoImg" fx:id="btnSaveStegoImg" layoutX="709.0" layoutY="629.0" mnemonicParsing="false" text="Save" />
+                  <Button id="btnSaveStegoImg" fx:id="btnSaveStegoImg" disable="true" layoutX="709.0" layoutY="629.0" mnemonicParsing="false" text="Save" />
                   <Label layoutX="759.0" layoutY="635.0" text="(.bmp)" />
                   <Button id="btnNext" fx:id="btnNext" alignment="BASELINE_LEFT" layoutX="828.0" layoutY="733.0" mnemonicParsing="false" onAction="#handleBtnMainMenu" prefHeight="26.0" prefWidth="93.0" text="Next" />
                   <Text id="textInfoStegoImg" fx:id="textInfoStegoImg" layoutX="803.0" layoutY="508.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="225.7294921875" />
