--- a/src/stegano/embeddingdoc.fxml
+++ b/src/stegano/embeddingdoc.fxml
@@ -54,7 +54,7 @@
                         <DropShadow color="#514f4f" height="22.49" radius="11.114999999999998" width="23.97" />
                      </effect>
                   </ImageView>
-                  <Button id="btnSaveStegoImg" fx:id="btnSaveStegoImg" disable="true" layoutX="709.0" layoutY="629.0" mnemonicParsing="false" text="Save" />
+                  <Button id="btnSaveStegoImg" fx:id="btnSaveStegoImg" onAction="#handleBtnSaveStegoImg" disable="true" layoutX="709.0" layoutY="629.0" mnemonicParsing="false" text="Save" />
                   <Label layoutX="759.0" layoutY="635.0" text="(.bmp)" />
                   <Button id="btnNext" fx:id="btnNext" alignment="BASELINE_LEFT" layoutX="828.0" layoutY="733.0" mnemonicParsing="false" onAction="#handleBtnMainMenu" prefHeight="26.0" prefWidth="93.0" text="Next" />
                   <Text id="textInfoStegoImg" fx:id="textInfoStegoImg" layoutX="803.0" layoutY="508.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="225.7294921875" />
