--- a/src/stegano/robustnessdoc.fxml
+++ b/src/stegano/robustnessdoc.fxml
@@ -2,51 +2,59 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Rectangle?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="613.0" prefWidth="1244.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stegano.RobustnessControl">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="793.0" prefWidth="1244.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stegano.RobustnessControl">
    <content>
-      <VBox prefHeight="611.0" prefWidth="1242.0">
+      <VBox prefHeight="790.0" prefWidth="1242.0">
          <children>
-            <AnchorPane prefHeight="611.0" prefWidth="758.0">
+            <AnchorPane prefHeight="790.0" prefWidth="1242.0">
                <children>
                   <Label layoutX="14.0" layoutY="14.0" text="Stego Image :" />
-                  <Button fx:id="btnBrowse" onAction="#handleBrowseStegoImg" layoutX="94.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="74.0" text="Browse" />
+                  <Button fx:id="btnBrowse" layoutX="94.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleBrowseStegoImg" prefHeight="25.0" prefWidth="74.0" text="Browse" />
                   <Label layoutX="168.0" layoutY="18.0" text="(.bmp)" />
                   <Separator layoutX="251.0" layoutY="10.0" orientation="VERTICAL" prefHeight="361.0" prefWidth="0.0" />
                   <ImageView fx:id="imgViewStego" fitHeight="223.0" fitWidth="244.0" layoutX="4.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true" />
                   <Label fx:id="lblInfoImgStego" layoutX="14.0" layoutY="273.0" prefHeight="100.0" prefWidth="234.0" text="( image information ... )" wrapText="true" />
-                  <Label layoutX="296.0" layoutY="10.0" text="Noise Insertion Technique" />
-                  <Rectangle fx:id="rectangleSaltPepper" visible="true" arcHeight="5.0" arcWidth="5.0" fill="#fafbfc" height="243.0" layoutX="257.0" layoutY="73.0" stroke="BLACK" strokeType="INSIDE" width="229.0" />
-                  <RadioButton fx:id="radioButtonSaltPepper" disable="true" layoutX="259.0" layoutY="42.0" mnemonicParsing="false" onAction="#handleRadioButtonToggle" text="Salt and Pepper Noise">
-                     <toggleGroup>
-                        <ToggleGroup fx:id="noiseGroup" />
-                     </toggleGroup>
-                  </RadioButton>
-                  <RadioButton fx:id="radioButtonDiagonal" disable="true" layoutX="498.0" layoutY="42.0" mnemonicParsing="false" onAction="#handleRadioButtonToggle" text="Diagonal Noise" toggleGroup="$noiseGroup" />
-                  <Rectangle fx:id="rectangleDiagonalNoise" visible="true" arcHeight="5.0" arcWidth="5.0" fill="#fafbfc" height="243.0" layoutX="495.0" layoutY="73.0" stroke="BLACK" strokeType="INSIDE" width="226.0" />
-                  <Label layoutX="268.0" layoutY="80.0" text="Noise Probability (0 - 100) : " />
-                  <TextField fx:id="txtfieldNoiseProbSaltPepper" layoutX="268.0" layoutY="105.0" prefHeight="25.0" prefWidth="145.0" />
-                  <Label layoutX="504.0" layoutY="80.0" text="Number of Noise : " />
-                  <TextField fx:id="txtfieldNumberOfNoiseDiagonal" layoutX="504.0" layoutY="105.0" />
-                  <Label layoutX="504.0" layoutY="137.0" text="Length of  Noise : " />
-                  <TextField fx:id="txtfieldLengthOfNoiseDiagonal" layoutX="504.0" layoutY="159.0" />
-                  <Button fx:id="btnAddNoise" onAction="#handleAddNoise" disable="true" layoutX="455.0" layoutY="339.0" mnemonicParsing="false" text="Add Noise" />
-                  <Separator layoutX="730.0" layoutY="10.0" orientation="VERTICAL" prefHeight="361.0" prefWidth="0.0" />
-                  <Label layoutX="736.0" layoutY="10.0" text="Stego Image (With Noise)" />
-                  <ImageView fx:id="imgViewStegoNoise" fitHeight="234.0" fitWidth="280.0" layoutX="736.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
-                  <Button fx:id="btnExtractMsg" disable="true" layoutX="743.0" layoutY="273.0" mnemonicParsing="false" text="Extract Message" />
-                  <TextArea fx:id="txtareaTest" layoutX="265.0" editable="false" layoutY="371.0" prefHeight="200.0" prefWidth="458.0" />
-                  <Button fx:id="btnMainMenu" layoutX="14.0" layoutY="571.0" mnemonicParsing="false" onAction="#handleBtnMainMenu" text="Main Menu" />
+                  <Label layoutX="13.0" layoutY="375.0" text="Noise Insertion (Salt And Pepper)" />
+                  <Label layoutX="13.0" layoutY="402.0" text="Noise Probability (0 - 100) : " />
+                  <TextField fx:id="txtfieldNoiseProbSaltPepper" layoutX="13.0" layoutY="427.0" prefHeight="25.0" prefWidth="145.0" />
+                  <Button fx:id="btnAddNoise" disable="true" layoutX="167.0" layoutY="427.0" mnemonicParsing="false" onAction="#handleAddNoise" text="Add Noise" />
+                  <Separator layoutX="530.0" layoutY="10.0" orientation="VERTICAL" prefHeight="361.0" prefWidth="0.0" />
+                  <Label layoutX="257.0" layoutY="10.0" text="Stego Image (With Noise)" />
+                  <ImageView fx:id="imgViewStegoNoise" fitHeight="234.0" fitWidth="267.0" layoutX="260.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
+                  <Button fx:id="btnInitExtractMsg" onAction="#handleInitExtractMsg" disable="true" layoutX="260.0" layoutY="280.0" mnemonicParsing="false" text="Extract Message ?" />
+                  <Button fx:id="btnMainMenu" layoutX="12.0" layoutY="743.0" mnemonicParsing="false" onAction="#handleBtnMainMenu" text="Main Menu" />
+                  <Separator layoutX="14.0" layoutY="372.0" prefHeight="0.0" prefWidth="238.0" />
+                  <VBox fx:id="vboxpaneExtraction" layoutX="540.0" layoutY="9.0" prefHeight="725.0" prefWidth="665.0" style="-fx-background-color: #f9f9f9;">
+                     <children>
+                        <AnchorPane fx:id="anchorPaneExtraction" prefHeight="727.0" prefWidth="665.0" disable="true">
+                           <children>
+                              <Label layoutX="8.0" layoutY="5.0" text="Kunci:" />
+                              <TextField fx:id="txtfieldKunci" onKeyReleased="#handleInputPassword" layoutX="8.0" layoutY="22.0" prefHeight="25.0" prefWidth="209.0" />
+                              <Button fx:id="btnExtractDecrypt" onAction="#handleExtractDecrypt" layoutX="228.0" layoutY="22.0" mnemonicParsing="false" text="Extract &amp; Decrypt" />
+                              <TextArea fx:id="txtareaOriMsg" editable="false" layoutX="13.0" layoutY="359.0" prefHeight="224.0" prefWidth="475.0" wrapText="true" />
+                              <Label layoutX="10.0" layoutY="60.0" text="Message from Extraction :" />
+                              <Separator layoutX="8.0" layoutY="53.0" prefHeight="0.0" prefWidth="475.0" />
+                              <TextArea fx:id="txtareaTest" layoutX="9.0" layoutY="81.0" prefHeight="200.0" prefWidth="478.0" wrapText="true" />
+                              <Label layoutX="14.0" layoutY="305.0" text="Browse original message file to compare extraction message" />
+                              <Button fx:id="btnBrowseTxt" onAction="#handleBrowseTxtOri" layoutX="14.0" layoutY="324.0" mnemonicParsing="false" text="Browse" />
+                              <Label layoutX="69.0" layoutY="330.0" text="(.txt)" />
+                              <Button fx:id="btnCompare" onAction="#handleBtnCompare" layoutX="13.0" layoutY="586.0" mnemonicParsing="false" text="Compare" />
+                              <Label layoutX="15.0" layoutY="632.0" text="Percentage result (%) :" />
+                              <TextField fx:id="txtfieldCompareResult" editable="false" layoutX="143.0" layoutY="626.0" prefHeight="31.0" prefWidth="119.0" />
+                              <Label layoutX="15.0" layoutY="677.0" text="Save data to Database? " />
+                              <Button fx:id="btnSaveRobustness" layoutX="148.0" layoutY="673.0" mnemonicParsing="false" text="Save" />
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </VBox>
                </children>
             </AnchorPane>
          </children>
