--- a/src/stegano/testresultdoc.fxml
+++ b/src/stegano/testresultdoc.fxml
@@ -2,37 +2,88 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane fx:controller="stegano.TestResult" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="664.0" prefWidth="771.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="707.0" prefWidth="882.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stegano.TestResult">
    <content>
-      <VBox prefHeight="662.0" prefWidth="769.0">
+      <VBox prefHeight="705.0" prefWidth="880.0">
          <children>
-            <AnchorPane prefHeight="663.0" prefWidth="769.0">
+            <AnchorPane prefHeight="706.0" prefWidth="769.0">
                <children>
-                  <Button fx:id="btnBacaData" onAction="#handleBacaData" layoutX="14.0" layoutY="21.0" mnemonicParsing="false" text="Baca Data" />
-                  <TableView fx:id="tableViewData" layoutX="14.0" layoutY="64.0" prefHeight="200.0" prefWidth="743.0">
-                    <columns>
-                      <TableColumn prefWidth="75.0" text="C1" />
-                      <TableColumn prefWidth="75.0" text="C2" />
-                    </columns>
-                  </TableView>
-                  <TextArea fx:id="textAreaData" editable="false" layoutX="14.0" layoutY="281.0" prefHeight="302.0" prefWidth="745.0" wrapText="true" />
-                  <HBox layoutX="-2.0" layoutY="627.0" prefHeight="29.0" prefWidth="771.0">
-                     <children>
-                        <ToolBar prefHeight="35.0" prefWidth="771.0">
-                          <items>
-                            <Button fx:id="btnMainMenu" onAction="#handleMainMenu" mnemonicParsing="false" prefHeight="14.0" prefWidth="77.0" text="Main Menu" />
-                          </items>
-                        </ToolBar>
-                     </children>
-                  </HBox>
+                  <TabPane layoutX="14.0" layoutY="24.0" prefHeight="629.0" prefWidth="856.0" tabClosingPolicy="UNAVAILABLE">
+                    <tabs>
+                      <Tab text="Imperceptibility">
+                           <content>
+                              <ScrollPane prefHeight="600.0" prefWidth="761.0">
+                                 <content>
+                                    <AnchorPane prefHeight="600.0" prefWidth="856.0">
+                                       <children>
+                                          <Button fx:id="btnBacaDataImperceptibility" layoutX="3.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleBacaDataImperceptibility" text="Syncronize Data" />
+                                          <TableView fx:id="tableViewDataImperceptibility" layoutX="3.0" layoutY="50.0" prefHeight="511.0" prefWidth="848.0">
+                                             <columns>
+                                                <TableColumn fx:id="noImperceptibilityTableCol" editable="false" prefWidth="56.0" text="No.">
+                                                    <cellValueFactory><PropertyValueFactory property="nomor" /></cellValueFactory>
+                                                </TableColumn>
+                                                <TableColumn fx:id="oriImageNameImperceptibilityTableCol" editable="false" prefWidth="225.0" sortable="false" text="Original Image Name">
+                                                    <cellValueFactory><PropertyValueFactory property="oriImage" /></cellValueFactory>
+                                                </TableColumn>
+                                                <TableColumn fx:id="stegoImageNameImperceptibilityTableCol" editable="false" prefWidth="225.0" sortable="false" text="Stego Image Name">
+                                                    <cellValueFactory><PropertyValueFactory property="stegoImage" /></cellValueFactory>
+                                                </TableColumn>
+                                                <TableColumn fx:id="txtLengthImperceptibilityTableCol" editable="false" prefWidth="73.0" sortable="false" text="Text Length">
+                                                    <cellValueFactory><PropertyValueFactory property="msgLength" /></cellValueFactory>
+                                                </TableColumn>
+                                                <TableColumn fx:id="mseImperceptibilityTableCol" editable="false" prefWidth="142.0" sortable="false" text="MSE">
+                                                    <cellValueFactory><PropertyValueFactory property="mse" /></cellValueFactory>
+                                                </TableColumn>
+                                                <TableColumn fx:id="psnrImperceptibilityTableCol" editable="false" prefWidth="126.0" sortable="false" text="PSNR">
+                                                    <cellValueFactory><PropertyValueFactory property="psnr" /></cellValueFactory>
+                                                </TableColumn>
+                                             </columns>
+                                          </TableView>
+                                       </children>
+                                    </AnchorPane>
+                                 </content>
+                              </ScrollPane>
+                           </content>
+                      </Tab>
+                      <Tab text="Robustness">
+                           <content>
+                              <ScrollPane prefHeight="200.0" prefWidth="200.0">
+                                <content>
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="744.0">
+                                       <children>
+                                          <Button fx:id="btnBacaDataRobustness" layoutX="3.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleBacaDataRobustness" text="Syncronize Data" />
+                                          <TableView fx:id="tableViewDataRobustness" layoutX="3.0" layoutY="50.0" prefHeight="540.0" prefWidth="737.0">
+                                            <columns>
+                                              <TableColumn fx:id="noColRobustness" editable="false" prefWidth="56.0" text="No.">
+                                                  <cellValueFactory><PropertyValueFactory property="nomor" /></cellValueFactory>
+                                              </TableColumn>
+                                              <TableColumn fx:id="stegoImageNameColRobustness" editable="false" prefWidth="225.0" sortable="false" text="Stego Image Name">
+                                                  <cellValueFactory><PropertyValueFactory property="stegoImage" /></cellValueFactory>
+                                              </TableColumn>
+                                              <TableColumn fx:id="noiseColRobustness" editable="false" prefWidth="86.0" sortable="false" text="Noise (%)">
+                                                  <cellValueFactory><PropertyValueFactory property="noiseProb" /></cellValueFactory>
+                                              </TableColumn>
+                                              <TableColumn fx:id="similarityColRobustness" editable="false" prefWidth="81.0" sortable="false" text="Similarity (%)">
+                                                  <cellValueFactory><PropertyValueFactory property="similarity" /></cellValueFactory>
+                                              </TableColumn>
+                                            </columns>
+                                          </TableView>
+                                       </children>
+                                    </AnchorPane>
+                                </content>
+                              </ScrollPane>
+                           </content></Tab>
+                    </tabs>
+                  </TabPane>
+                  <Button fx:id="btnMainMenu" layoutX="14.0" layoutY="667.0" mnemonicParsing="false" onAction="#handleMainMenu" prefHeight="14.0" prefWidth="77.0" text="Main Menu" />
                </children>
             </AnchorPane>
          </children>
