--- a/src/stegano/imperceptibilitydoc.fxml
+++ b/src/stegano/imperceptibilitydoc.fxml
@@ -37,6 +37,7 @@
                   <Separator layoutX="560.0" layoutY="45.0" prefWidth="200.0" />
                   <Button fx:id="btnSave" disable="true" layoutX="689.0" layoutY="213.0" mnemonicParsing="false" onAction="#handleBtnSaveData" prefHeight="25.0" prefWidth="70.0" text="Save" />
                   <Label layoutX="607.0" layoutY="195.0" text="Save this data to Database ?" />
+                  <Button fx:id="btnShowHistogram" disable="true" layoutX="654.0" layoutY="277.0" mnemonicParsing="false" onAction="#handleShowHistogram" prefHeight="31.0" prefWidth="105.0" text="Show Histogram" />
                </children>
             </AnchorPane>
          </children>
